--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,37 +1,38 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "Eden-Test-Locale",
-      "build_source_folder": "Eden-Test-Locale",
-      "build_output_subfolder": "Eden-Test-Locale",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
-  "notification_subscribers": [],
-  "sync_notification_subscribers": [],
+  "branch_target_mapping": {},
   "branches_to_filter": [],
-  "skip_source_output_uploading": false,
-  "need_preview_pull_request": false,
   "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
-      "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
-      "branch_mapping": {}
+      "branch_mapping": {},
+      "path_to_root": "_themes",
+      "url": "https://github.com/Microsoft/templates.docs.msft"
     }
   ],
-  "branch_target_mapping": {},
-  "need_generate_pdf_url_template": false,
   "docs_build_engine": {
     "name": "docfx_v3"
-  }
+  },
+  "docsets_to_publish": [
+    {
+      "build_entry_point": "docs",
+      "build_output_subfolder": "Eden-Test-Locale",
+      "build_source_folder": "Eden-Test-Locale",
+      "docset_name": "Eden-Test-Locale",
+      "locale": "en-us",
+      "moniker_ranges": [],
+      "monikers": [],
+      "open_to_public_contributors": true,
+      "template_folder": "_themes",
+      "type_mapping": {
+        "Conceptual": "Content"
+      }
+    }
+  ],
+  "git_repository_branch_open_to_public_contributors": "master",
+  "need_generate_pdf_url_template": false,
+  "need_preview_pull_request": false,
+  "notification_subscribers": [],
+  "skip_source_output_uploading": false,
+  "sync_notification_subscribers": []
 }
